I solved the static screen problem! The pixels flicker randomly, and I am a very happy dude... Fixed the buttons to toggle the viewer-screen class and disply the content too.

--- a/style.css
+++ b/style.css
@@ -1,40 +1,50 @@
 body {
-    background-color:rgb(162, 169, 163);
+    background-color:rgb(13, 13, 12);
     display: grid;
-    grid-template-rows: auto auto auto;width: 100%;
+    grid-template-rows: auto auto auto;
+    width: 100%;
 }
 
-header{
+header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 425px;
-    background-color: black;
-    color: white;
+    background-color: rgb(7, 7, 7);
+    border: 2px solid rgb(255, 78, 78);
+    color: rgb(254, 254, 254);
     border-radius: 10px;
-    margin-left: 10%;
-    margin-right: 25px;
-
-}
-header h1 {
-    margin: 20px auto 5px 20px;
 }
 
-#name {
+#social {
+    display: none;
+ }
 
+header h2 {
+    margin: 10px auto 5px 20px;
 }
 
-header h1 {
+@keyframes blinker {
+    0% {opacity: 0%}
+  
+    50% {opacity: 100%}
 
+    100% {opacity: 0%}
+  }
+
+.blinker {
+    animation: blinker 900ms infinite;
+}
+
+.removable-sheet {
+    display: none;
 }
 
 header nav {
 }
 
 nav ul {
+    list-style-type: none;
 }
 
 nav ul li {
-
 }
 
 #box-wrapper {
@@ -48,41 +58,52 @@ nav ul li {
     gap: 10px;
 }
 
-@keyframes fadein {
-    from {opacity: 0%;}
-    to {opacity: 100%;}
-  }
 
-#box-6 > .viewer-screen {
+
+.viewer-screen {
     display: flex;
-    background-color:rgb(255, 255, 255);
-    text-align: center;
+    background-color:rgb(254, 254, 254);
 }
+
+@keyframes dimmer {
+    
+    0% {opacity: 100%;}
+    50% {opacity: 40%
+    100% {opacity: 20%;}
+  }
 
 .viewer-screen > p {
     font-size: 20px;
     padding: 10px;
     margin-top: 50px;
+    border-radius: 7%;
 }
 
-@keyframes fadein {
-    from {opacity: 0%;}
-    to {opacity: 100%;}
-  }
+div #box-6.box.snow-screen {
+    display: grid;
+    grid-template: repeat(24, 1fr) / repeat(24, 1fr);
+    border-radius: 7%;
+}
 
 .box {
-    display: flex;
-    border: 2px solid rgb(21, 19, 19);
-    background-color: rgb(86, 3, 3);
-    color: white;
+    border: 2px solid rgb(255, 78, 78);
+    background-color: rgb(225, 241, 218);
+    text-align: center;
+    color: rgb(13, 13, 12);
     border-radius: 7%;
-    animation:infinite;
     cursor: pointer;
 }
 
 .dimmed {
-    opacity: unset;
+    animation: dimmer 500ms;
 }
+
+@keyframes fadein {
+    
+    from {opacity: 0%;}
+    to {opacity: 100%;}
+  }
+  
 
 #box-1 {
     grid-area: 4 / 4 / 5 / 5;
@@ -96,42 +117,43 @@ nav ul li {
 
 #box-3 {
     grid-area: 6 / 4 / 4 / 2;
-    animation: fadein 1100ms;
+    animation: fadein 1400ms;
 }
 
 #box-4 {
     grid-area: 4 / 2 / 1 / 5;
-    animation: fadein 900ms;
+    animation: fadein 1600ms;
 }
 
 #box-5 {
     grid-area: 1 / 5 / 6 / 10;
-    animation: fadein 1200ms;
+    animation: fadein 1800ms;
 }
 
 #box-6 {
     grid-area: 6 / 10 / 14 / 2;
-    animation: fadein 1700ms;
+    animation: fadein 2000ms;
+    border-radius: 7%;
 }
 
 footer  {
-    display: grid;
-    grid-template-columns: 2fr;
+    display: flex;
+    justify-self: center;
     height: 100px;
     width: 400px;
-    justify-self: right;
     border-radius: 10px;;
     background-color: black;
-    margin: 0px 10% 5% 0;
+    border: 2px solid rgb(255, 78, 78);
+    margin: 0 0% 5% 0;
 }
 
 @media screen and (min-width: 426px) {
-    body {
-       
-
-    }
+    
+    #social {
+        display: none;
+     }
     header {
-      
+      margin-right: 0%;
     }
     #box-wrapper {
         width: 768px;
@@ -143,9 +165,14 @@ footer  {
 }
 
 @media screen and (min-width: 768px) {
+    
     header {
         width: 768px;
         grid-template-columns: 1fr 1fr;
+    }
+
+    #social {
+       justify-content: right;
     }
 
     #box-wrapper {
@@ -169,21 +196,21 @@ footer  {
     
     #box-3 {
         grid-area: 7 / 7 / 9 / 5;
-        animation: fadein 1100ms;
+        animation: fadein 1400ms;
     }
     
     #box-4 {
         grid-area: 9 / 5 / 6 / 2;
-        animation: fadein 900ms;
+        animation: fadein 1600ms;
     }
     
     #box-5 {
         grid-area: 6 / 2 / 1 / 7;
-        animation: fadein 1200ms;
+        animation: fadein 2000ms;
     }
     
     #box-6 {
         grid-area: 1 / 7 / 9 / 15;
-        animation: fadein 1700ms;
+        animation: fadein 1800ms;
     }
 }
